--- a/src/main/resources/static/css/public.css
+++ b/src/main/resources/static/css/public.css
@@ -1,10 +1,20 @@
 body{
-    font-family: "first font", serif !important;
-    background-color: #ffffff !important;
+    font-family: 'pingFang font', serif !important;
+    background-color: #F6F6F6 !important;
     overflow-y:scroll !important;
 
     /*解决bootstrap的弹窗出现之后滚动条消失，页面横移问题*/
     padding-right: 0!important;
+}
+
+@font-face {
+    font-family: pingFang font;
+    src: url("../font/pingFang.ttf");
+}
+
+@font-face {
+    font-family: songTi font;
+    src: url("../font/songTi.ttf");
 }
 
 nav{
@@ -15,19 +25,17 @@ nav{
     box-shadow: 0 0 12px 0 rgba(0,0,0,0.15)
 }
 
-@font-face {
-    font-family: first font;
-    /*src: url("../font/PingFang Medium.ttf");*/
-    src: url("/font/PingFang Medium.ttf");
-}
-
 a{
     text-decoration: none !important;
 }
 
+a:hover{
+    color: #1f8dfb !important;
+}
+
 .page-container-header{
     margin: 0 auto;
-    width: 1280px;
+    width: 1240px;
     font-size: 0;
     background-color: #ffffff;
     padding-left: 15px;
@@ -44,21 +52,10 @@ a{
 
 .page-header-logo{
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     padding-top: 11px;
     padding-bottom: 11px;
-    padding-right: 30px;
-}
-
-.page-header-search{
-    margin: 0 auto;
-    max-width: 924px;
-}
-
-@keyframes searchBar {
-    to{
-
-    }
+    padding-right: 40px;
 }
 
 .page-header-personalInfo{
@@ -66,38 +63,30 @@ a{
     top: 62px;
 }
 
-.page-search{
-    padding: 15px 20px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 2px 12px 0 rgba(0,0,0,0.15);
-}
-
-.page-search-input{
-    font-size: 16px;
-    color: #484848;
-    border: 1px solid #1f8dfb;
-    border-radius: 20px 0 0 20px;
-    padding: 5px 10px 5px 15px;
-    width: 480px;
-    outline: none;
-}
-
-.page-search-button{
-    font-size: 16px;
-    color: #ffffff;
-    padding: 5px 20px;
-    background-color: #1f8dfb;
-    border-radius: 0 20px 20px 0;
-    border: 1px solid #1f8dfb;
-    outline: none;
-}
-
 .page-personalInfo{
     padding: 10px 20px;
     background-color: #ffffff;
     border-radius: 10px;
-    box-shadow: 0 2px 12px 0 rgba(0,0,0,0.15);
+    box-shadow: 0 0 12px 0 rgba(0,0,0,0.1);
+}
+
+.page-header-nav-top{
+    display: inline-block;
+    vertical-align: top;
+    height: 62px;
+    padding: 0 14px 4px 14px;
+    text-align: center;
+    font-weight: bold;
+    text-decoration: none;
+    color: #1f8dfb;
+    border-top: 4px solid transparent;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
+    cursor: pointer;
+}
+
+.page-header-nav-top:hover{
+    border-top: 4px solid #1f8dfb;
 }
 
 .page-header-nav{
@@ -106,10 +95,8 @@ a{
     height: 62px;
     padding: 0 14px 4px 14px;
     text-align: center;
-    font-weight: bold;
     text-decoration: none;
     color: #8590a6;
-    background-color: #ffffff;
     border-top: 4px solid transparent;
     border-left: 1px solid transparent;
     border-right: 1px solid transparent;
@@ -127,11 +114,125 @@ a{
     display: inline-block;
     vertical-align: top;
     height: 62px;
-    padding: 0 16px 4px 16px;
+    padding: 0 14px 4px 14px;
     text-align: center;
-    font-weight: bold;
+    color: #8590a6;
     text-decoration: none;
     cursor: pointer;
+}
+
+.page-header-search-content{
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    height: 62px;
+    padding: 4px 16px 4px 16px;
+    text-align: center;
+    color: #8590a6;
+}
+
+.page-header-nav-search{
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.page-header-search-bg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin:3px;
+    padding: 2px;
+    border-radius: 20px;
+    background-color: #8590a6;
+    opacity: 0.5;
+}
+
+.page-header-search-bg-hover{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin:3px;
+    padding: 2px;
+    border-radius: 20px;
+    background: linear-gradient(160deg,#ff5c5c, #1f8dfb);
+    opacity: 1;
+}
+
+.page-header-search-bg:hover{
+    background: linear-gradient(160deg,#ff5c5c, #1f8dfb);
+    opacity: 1;
+}
+
+.page-header-search-input{
+    color: #8590a6;
+    background-color: #ffffff;
+    border-radius: 20px;
+    padding-left: 5px;
+}
+
+.search-button{
+    display: inline-block;
+    padding: 0 12px;
+    outline: none;
+    cursor: pointer;
+}
+
+.search-button:hover{
+    color: #1f8dfb;
+}
+
+.search-input-content{
+    width: 100px;
+    background: transparent;
+    color: #484848;
+    font-size: 15px;
+    padding: 4px 10px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+}
+
+.search-input-content-broader{
+    background: transparent;
+    color: #484848;
+    font-size: 15px;
+    padding: 4px 10px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    animation: searchBroader 0.5s;
+    animation-fill-mode:forwards;
+}
+
+.search-input-content-narrower{
+    background: transparent;
+    color: #484848;
+    font-size: 15px;
+    padding: 4px 10px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    animation: searchNarrower 0.5s;
+    animation-fill-mode:forwards;
+}
+
+@keyframes searchBroader {
+    from{
+        width: 100px;
+    }
+    to {
+        width: 300px;
+    }
+}
+
+@keyframes searchNarrower {
+    from{
+        width: 300px;
+    }
+    to {
+        width: 100px;
+    }
 }
 
 .page-header-nav-button:hover{
@@ -188,11 +289,37 @@ a{
 .page-right-card-info{
     width: auto;
     height: 350px;
-    margin-top: 18px;
+    margin-top: 15px;
     padding: 10px 25px;
     border-radius: 15px;
     background-color: #ffffff;
-    box-shadow: 0 2px 12px 0 rgba(0,0,0,0.15);
+    box-shadow: 0 0 12px 0 rgba(0,0,0,0.1);
+}
+
+.page-dark-night-item{
+    display: block;
+    font-size: 0;
+    color: #8590a6;
+    margin: 10px 0;
+}
+
+.dark-night-button{
+    padding: 6px 20px;
+    background-color: inherit;
+    font-size: 14px;
+    color: #8590a6;
+    border: 1px solid #8590a6;
+    outline: none!important;
+}
+
+.dark-night-button-press{
+    padding: 6px 20px;
+    background-color: #1f8dfb;
+    font-size: 14px;
+    color: #ffffff;
+    border: 1px solid #1f8dfb;
+    outline: none!important;
+
 }
 
 .page-personalInfo-items{
@@ -224,16 +351,17 @@ a{
     padding: 10px 20px;
     font-size: 16px;
     color: #484848;
-    border: none;
+    border: 1px solid #dddddd;
+    border-radius: 15px;
     outline: none;
     overflow: auto;
 }
 
 .question-submit{
     margin: 0 auto;
-    padding: 5px 50px;
+    padding: 5px 60px;
     background-color: transparent;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: bold;
     color: #1f8dfb;
     border: 1px solid #1f8dfb;
@@ -245,3 +373,122 @@ a{
     color: #ffffff;
     background-color: #1f8dfb;
 }
+
+.comment-card{
+    display: table;
+    width: 640px;
+    font-size: 15px;
+    color: #1a1a1a;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eeeeee;
+}
+
+.comment-card-img{
+    width: 24px;
+    height: 24px;
+    margin-right: 5px;
+    border: 1px solid #ff5c5c;
+    border-radius: 50% 50%;
+}
+
+.comment-card-time{
+    font-size: 14px;
+    color: #8590a6;
+}
+
+.comment-card-description{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    white-space: normal;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.comment-bottom-item{
+    display: inline-block;
+    font-size: 14px;
+    color: #8590a6;
+    margin: 0 10px;
+    cursor: pointer;
+}
+
+.comment-bottom-item:hover{
+    color: #656d7d;
+}
+
+.comment-dialog {
+    max-width: 680px!important;
+    color: #1a1a1a!important;
+}
+
+.close{
+    outline: none!important;
+}
+
+.comment-sort{
+    margin-left: 15px;
+    padding: 0;
+    color: #656d7d;
+    font-size: 16px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.comment-sort{
+    color: #656d7d;
+}
+
+.page-toast-close{
+    font-size: 18px;
+    line-height: 22px;
+}
+
+.page-toast-text{
+    padding:10px 20px!important;
+    color: #2b2b2b;
+}
+
+.modal-content{
+    border-radius: 15px!important;
+}
+
+.create-question-title{
+    font-size: 14px;
+    color: #4d4c4c;
+}
+
+.create-comment-content{
+    border: 1px solid #ff8c8c;
+    padding: 2px 0;
+    border-radius: 20px;
+    font-size: 15px;
+}
+
+.create-comment-input{
+    display: inline-block;
+    width: 550px;
+    padding: 5px 15px;
+    background-color: transparent;
+    border: none;
+    color: #4d4c4c;
+    border-radius: 20px;
+    outline: none!important;
+}
+
+.create-comment-submit{
+    display: inline-block;
+    margin-right: 10px;
+    padding: 0 15px;
+    background-color: #ffecec;
+    color: #ff5c5c;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.create-comment-submit:hover{
+    background-color: #ff5c5c;
+    color: #ffffff;
+}
+
