--- a/src/main/resources/static/css/register_page.css
+++ b/src/main/resources/static/css/register_page.css
@@ -1,5 +1,6 @@
 .register-page{
-    background-image: url("/img/background.png");
+    background-image: url("../img/background.png");
+    background-color: #F6F6F6;
     background-position:center center;
     background-size:cover;
     background-repeat: no-repeat;
@@ -8,18 +9,17 @@
 }
 
 .register-page-load-title{
-    font-size: 28px;
-    font-weight: 800;
-    color: #1f8dfb;
+    font-size: 20px;
+    color: #4d4c4c;
+    text-align: center;
 }
 
 .register-page-load-text{
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .register-page-login{
     display: inline-block;
-    font-size: 16px;
     color: #1f8dfb;
     cursor: pointer;
 }
@@ -32,13 +32,19 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    padding: 20px;
+    transform: translate(-50%,-55%);
+    padding: 30px 40px;
+    border-radius: 15px;
     background-color: #ffffff;
     box-shadow: 0 2px 12px 0 rgba(0,0,0,0.15);
 }
 
 .register-page-input-div{
+    padding: 15px 0;
+    color: #2b2b2b
+}
+
+.register-page-input-div2{
     padding: 10px 0;
     color: #2b2b2b
 }
@@ -47,6 +53,7 @@
     width: 350px;
     background-color: transparent;
     border-radius: 30px;
+    font-size: 15px;
     border: 1px solid #1f8dfb;
     padding: 10px 15px;
     outline: none;
@@ -56,7 +63,7 @@
 .register-page-submit {
     width: 350px;
     height: 44px;
-    font-size: 20px;
+    font-size: 18px;
     color: #ffffff;
     background-color: #1f8dfb;
     border: 1px solid #1f8dfb;
